# propiedades-los-alpes

./: .env  .gitignore  .gitpod.yml  README.md  bff-requirements.txt  docker-compose-test.yml  docker-compose.yml  listados.Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: build_test.yaml
src/: resultados_creacion.csv
src/auditorias/: Dockerfile
src/auditorias/api/: __init__.py  auditorias.py  cliente.py
src/auditorias/config/: db.py  logger.py  pulsar.py  uow.py
src/auditorias/seedwork/aplicacion/: comandos.py  dto.py  handlers.py  queries.py
src/auditorias/seedwork/dominio/: entidades.py  eventos.py  excepciones.py  fabricas.py  mixins.py  objetos_valor.py  reglas.py  repositorios.py  servicios.py
src/auditorias/seedwork/infraestructura/: eventos.py  uow.py
src/auditorias/tests/: test_main.py
src/bff_web/: Dockerfile  consumidores.py  despachadores.py  main.py  utils.py
src/bff_web/api/v1/: consultas.py  esquemas.py  mutaciones.py
src/contratos/: Dockerfile  test.py
src/contratos/api/: __init__.py  cliente.py  contratos.py
src/contratos/config/: db.py  logger.py  pulsar.py  uow.py
src/contratos/modulos/sagas/: consumidores.py  db_models.py  repository.py  saga.py
src/contratos/tests/: test_main.py
src/experimento/: Dockerfile
src/experimento/api/: __init__.py
src/listados/: Dockerfile
src/listados/api/: __init__.py  cliente.py  companias.py  contratos.py  listados.py  planos.py  propiedades.py
src/listados/config/: db.py  despachador.py  logger.py  pulsar.py  uow.py
src/listados/tests/: test_main.py
(+118 files in other folders)
