[project]
name = "propiedad-de-los-alpes"
version = "1.0.0"
authors = [
  { name="Someone", email="someone@example.com" },
]
description = "Proyecto propiedad de los alpes"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  ".", "src",
]
